--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,10 @@
 exclude: 'node_modules|.git'
-default_stages: [pre-commit]
 fail_fast: false
 
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
         files: "otp_generation.*"
@@ -31,18 +30,19 @@ repos:
         name: "Run ruff formatter"
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.1.0
     hooks:
       - id: prettier
         types_or: [javascript, vue, scss]
+        language_version: system
         # Ignore any files that might contain jinja / bundles
         exclude: |
             (?x)^(
-                otp_generation/public/dist/.*|
-                .*node_modules.*|
-                .*boilerplate.*|
-                otp_generation/templates/includes/.*|
-                otp_generation/public/js/lib/.*
+                 otp_generation/public/dist/.*|
+                 .*node_modules.*|
+                 .*boilerplate.*|
+                 otp_generation/templates/includes/.*|
+                 otp_generation/public/js/lib/.*
             )$
 
 
@@ -52,6 +52,7 @@ repos:
       - id: eslint
         types_or: [javascript]
         args: ['--quiet']
+        language_version: system
         # Ignore any files that might contain jinja / bundles
         exclude: |
             (?x)^(
