--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,11 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
 
 concurrency:
-  group: main-erpnext_australian_localisation-${{ github.event.number }}
+  group: develop-solvfast_ai-${{ github.event.number }}
   cancel-in-progress: true
 
 jobs:
@@ -77,9 +77,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install MariaDB Client
-        run: |
-          sudo apt update
-          sudo apt-get install mariadb-client
+        run: sudo apt-get install mariadb-client-10.6
 
       - name: Setup
         run: |
@@ -91,12 +89,10 @@ jobs:
       - name: Install
         working-directory: /home/runner/frappe-bench
         run: |
-          bench get-app erpnext
-          bench get-app erpnext_australian_localisation $GITHUB_WORKSPACE
+          bench get-app solvfast_ai $GITHUB_WORKSPACE
           bench setup requirements --dev
           bench new-site --db-root-password root --admin-password admin test_site
-          bench --site test_site install-app erpnext
-          bench --site test_site install-app erpnext_australian_localisation
+          bench --site test_site install-app solvfast_ai
           bench build
         env:
           CI: 'Yes'
@@ -105,6 +101,6 @@ jobs:
         working-directory: /home/runner/frappe-bench
         run: |
           bench --site test_site set-config allow_tests true
-          bench --site test_site run-tests --app erpnext_australian_localisation
+          bench --site test_site run-tests --app solvfast_ai
         env:
           TYPE: server
